# hft-challenges

./: .gitignore  README.md  sync.sh
.github/workflows/: build.yml
challenge-01-order-book/: CMakeLists.txt  README.md  benchmark.cpp  challenge.yaml
challenge-01-order-book-rust/: Cargo.toml  README.md
challenge-01-order-book-rust/solution/: mod.rs
challenge-01-order-book-rust/src/: main.rs  types.rs
challenge-01-order-book/solution/: solution.cpp  solution.h
challenge-02-multi-book/: CMakeLists.txt  EXCHANGE.md  benchmark.cpp  venue.h
challenge-02-multi-book-rust/: Cargo.toml  README.md
challenge-02-multi-book-rust/solution/: mod.rs
challenge-02-multi-book-rust/src/: main.rs  types.rs
challenge-02-multi-book/solution/: solution.cpp  solution.h
challenge-03-event-scheduler/: CMakeLists.txt  benchmark.cpp  scheduler.h
challenge-03-event-scheduler-rust/: Cargo.toml  README.md
challenge-03-event-scheduler-rust/solution/: mod.rs
challenge-03-event-scheduler-rust/src/: main.rs  types.rs
challenge-03-event-scheduler/solution/: solution.cpp  solution.h
challenge-04-event-scheduler/: CMakeLists.txt  benchmark.cpp
challenge-04-event-scheduler-rust/: Cargo.toml  README.md
challenge-04-event-scheduler-rust/solution/: mod.rs
challenge-04-event-scheduler-rust/src/: main.rs  types.rs
challenge-04-event-scheduler/solution/: solution.h
challenge-05-ring-buffer/: CMakeLists.txt  benchmark.cpp
challenge-05-ring-buffer/solution/: solution.cpp  solution.h
challenge-06-seqlock/: CMakeLists.txt  benchmark.cpp
challenge-06-seqlock/solution/: solution.cpp  solution.h
challenge-07-string-map/: CMakeLists.txt  benchmark.cpp
challenge-07-string-map-rust/: Cargo.toml  README.md
challenge-07-string-map-rust/solution/: mod.rs
challenge-07-string-map-rust/src/: main.rs  types.rs
challenge-07-string-map/solution/: solution.cpp  solution.h
challenge-08-ticker-lookup/: CMakeLists.txt  benchmark.cpp  tickers.txt
challenge-08-ticker-lookup-rust/: Cargo.toml  README.md
challenge-08-ticker-lookup-rust/solution/: mod.rs
challenge-08-ticker-lookup-rust/src/: main.rs  types.rs
challenge-08-ticker-lookup/solution/: solution.cpp  solution.h
challenge-09-fix-parser/: CMakeLists.txt  benchmark.cpp
challenge-09-fix-parser-rust/: Cargo.toml  README.md
challenge-09-fix-parser-rust/solution/: mod.rs
challenge-09-fix-parser-rust/src/: main.rs  types.rs
challenge-09-fix-parser/solution/: solution.cpp  solution.h
challenge-10-fix-builder/: CMakeLists.txt  benchmark.cpp
challenge-10-fix-builder-rust/: Cargo.toml  README.md
challenge-10-fix-builder-rust/solution/: mod.rs
challenge-10-fix-builder-rust/src/: main.rs  types.rs
challenge-10-fix-builder/solution/: solution.cpp  solution.h
challenge-11-rolling-counter/: CMakeLists.txt  benchmark.cpp
challenge-11-rolling-counter-rust/: Cargo.toml  README.md
challenge-11-rolling-counter-rust/solution/: mod.rs
challenge-11-rolling-counter-rust/src/: main.rs  types.rs
challenge-11-rolling-counter/solution/: solution.cpp  solution.h
challenge-12-feed-arbiter/: CMakeLists.txt  benchmark.cpp
challenge-12-feed-arbiter-rust/: Cargo.toml  README.md
challenge-12-feed-arbiter-rust/solution/: mod.rs
challenge-12-feed-arbiter-rust/src/: main.rs  types.rs
challenge-12-feed-arbiter/solution/: solution.cpp  solution.h
challenge-13-implied-book/: CMakeLists.txt  benchmark.cpp
challenge-13-implied-book-rust/: Cargo.toml  README.md
challenge-13-implied-book-rust/solution/: mod.rs
challenge-13-implied-book-rust/src/: main.rs  types.rs
challenge-13-implied-book/solution/: solution.cpp  solution.h
challenge-14-build-optimization/: CMakeLists.txt  benchmark.cpp  challenge.yaml
challenge-14-build-optimization/solution/: solution.cpp  solution.h
challenge-15-implied-vol/: CMakeLists.txt  benchmark.cpp  types.h
challenge-15-implied-vol-rust/: Cargo.toml  README.md
challenge-15-implied-vol-rust/solution/: mod.rs
challenge-15-implied-vol-rust/src/: main.rs  types.rs
challenge-15-implied-vol/solution/: solution.cpp  solution.h
challenge-16-monte-carlo/: CMakeLists.txt  benchmark.cpp  types.h
challenge-16-monte-carlo-rust/: Cargo.toml  README.md
challenge-16-monte-carlo-rust/solution/: mod.rs
challenge-16-monte-carlo-rust/src/: main.rs  types.rs
challenge-16-monte-carlo/solution/: solution.cpp  solution.h
challenge-17-cross-ccx-ring/: CMakeLists.txt  benchmark.cpp  challenge.yaml
challenge-17-cross-ccx-ring/solution/: solution.cpp  solution.h
challenge-18-build-optimization-2/: CMakeLists.txt  benchmark.cpp  challenge.yaml  hotpath.cpp  hotpath.h  inner.cpp  inner.h
challenge-18-build-optimization-2/solution/: solution.h
common/: benchmark_harness.h  challenge.cmake  hftu_xoshiro.h
common/hftu-bench/: Cargo.toml
common/hftu-bench/src/: lib.rs  tsc.rs
